FIX: Hide fist icon on smallest devices

--- a/src/app/home/topic-detail/topic-detail.component.sass
+++ b/src/app/home/topic-detail/topic-detail.component.sass
@@ -145,6 +145,12 @@
           bakground-position: center center
           transition: all .2s ease
 
+          @media (screen and max-width: 500px)
+            height: 18px
+
+          @media (screen and max-width: 356px)
+            display: none
+
     a
       display: block
       font-size: 1.2em
